테스트를 위해 제약사항 제거